--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-PURPOSE: Add Google Analytics with a Bounce Rate Fix to WordPress
+# Analytics Unbounce
 
-AUTHOR: Ishan Sharma 
-AUTHOR URL: http://ishan./co
-PLUGIN URL: http://wpblogexperts.com/plugins
+Analytics Unbounce is a WordPress plugin that adds improved Google Analytics code to footer of your blog. The inspiration for the plugin came from Mike's Post: [Run a blog? Fix your bounce rate.](http://drawingablank.me/blog/fix-your-bounce-rate.html)
+
+To know more or for questions, visit [WordPress Blog Experts](http://wpblogexperts.com/plugins)
