--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-# Analytics Unbounce
+Analytics Unbounce
 
-Analytics Unbounce is a WordPress plugin that adds improved Google Analytics code to footer of your blog. The inspiration for the plugin came from Mike's Post: [Run a blog? Fix your bounce rate.](http://drawingablank.me/blog/fix-your-bounce-rate.html)
+Analytics Unbounce is a WordPress plugin that adds improved Google Analytics code to footer of your blog. The inspiration for the plugin came from Mike's Post: Run a blog? Fix your bounce rate. http://drawingablank.me/blog/fix-your-bounce-rate.html
 
-To know more or for questions, visit [WordPress Blog Experts](http://wpblogexperts.com/plugins)
+To know more or for questions, visit WordPress Blog Experts http://wpblogexperts.com/plugins
